--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,5 +1,5 @@
 .menu {
-    width: 24%;
+    width: 25%;
 }
 
 .menu ul {
