--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    width: 24%;
+    width: 25%;
     padding-left: 2.5rem;
     box-sizing: border-box;
 }
